--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,26 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--集成markdown-->
+        <!--*************-->
+        <dependency>
+            <groupId>com.atlassian.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.10.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.atlassian.commonmark</groupId>
+            <artifactId>commonmark-ext-heading-anchor</artifactId>
+            <version>0.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.commonmark</groupId>
+            <artifactId>commonmark-ext-gfm-tables</artifactId>
+            <version>0.10.0</version>
+        </dependency>
+        <!--*************-->
     </dependencies>
 
     <build>
