--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql:///blog?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf8
+    url: jdbc:mysql:///blog?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true
     username: root
-    password: 5567786
+    password: zzz5567786
     driver-class-name: com.mysql.cj.jdbc.Driver
   #jpa
   jpa:
